<resources>
    <string name="app_name">Mobile Dev Midterm Quiz</string>
    <string name="A_button_label">A</string>
    <string name="B_button_label">B</string>
    <string name="C_button_label">C</string>
    <string name="D_button_label">D</string>
    <string name="E_button_label">E</string>
    <string name="Prev_button_label">PREV</string>
    <string name="Submit_button_label">SUBMIT</string>
    <string name="Next_button_label">NEXT</string>
    <string name="question_text">Is Java an Object-Oriented Language</string>
    <string name="No_Prev_label">This is the first question</string>
    <string name="No_Next_label">This is the last question</string>


    <string name="question1">Which company owns Android Studio?[A]</string>
    <string name="question2">Which is another native language used in Android Studio?[B]</string>
    <string name="question3">Which Operating System is Android based on ?[C]</string>
    <string name="question4">When is the Midterm?[D]</string>
    <string name="question5">Which course did Pro L.D Nel teach last term?[E]</string>
    <string name="question6">Which feature provides a similar functionality like "Interface" in Swift?[A]</string>
    <string name="question7">What is the newest version of Swift?[B]</string>
    <string name="question8">Which can NOT be used for Android development?[C]</string>
    <string name="question9">Which one is not a library[D]</string>
    <string name="question10">What one is not a COMP Science Stream at Carleton?[E]</string>


    <string name="choice1">A: Google\n B: Micosoft\n C: Tencent\n D: Facebook\n E: Oracle</string>
    <string name="choice2">A: Swift\n B: Kotlin\n C: JavaScript\n D: Objective-C\n E: C#</string>
    <string name="choice3">A: Windows\n B: Dos\n C: Linux\n D: MacOS\n E: None</string>
    <string name="choice4">A: Mar.4 \n B: Feb.26 \n C: Feb.28 \n D: None above\n E: TBD</string>
    <string name="choice5">A: COMP2401 \n B: COMP2601 \n C: COMP1406 \n D: COMP2404 n E: COMP3005</string>
    <string name="choice6">A: Protocol \n B: Closure\n C: Delegate\n D: Subscript \n E:Taylor</string>
    <string name="choice7">A: 6 \n B: 5\n C: 4\n D: 3 \n E:None above</string>
    <string name="choice8">A: Ionic \n B: ReactNative\n C: ARKit\n D: Xamarin \n E:Unity</string>
    <string name="choice9">A: Angular \n B: ReactNative\n C: ARKit\n D: GO \n E:OpenGL</string>
    <string name="choice10">A: Biomedical \n B: Mobile\n C:\n D: Business \n E:CompEngineering</string>

    <string name="your_grade_title">Your Midterm Grade</string>
    <string name="your_grade_result">Your Midterm Result</string>
    <string name="your_grade_comment">Your Midterm Comment</string>
</resources>
