<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/question_text"
        android:id="@+id/question_text_view"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Button
            android:id="@+id/A_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/A_button_label" />

        <Button
            android:id="@+id/B_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/B_button_label" />

        <Button
            android:id="@+id/C_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/C_button_label" />

        <Button
            android:id="@+id/D_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/D_button_label" />

        <Button
            android:id="@+id/E_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/E_button_label" />

    </LinearLayout>
</LinearLayout>