<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="1"
    android:background="@drawable/ne"
    android:gravity="center"
    app:layout_constraintTop_toTopOf="@android:id/background">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:alpha="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/your_grade_title"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_margin="30dp"
            android:layout_weight="1000"
            android:alpha="0.95"
            android:padding="12dp"
            android:text="@string/your_grade_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/grade_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:alpha="1"
            android:background="@color/colorSelected"
            android:fadingEdge="horizontal|vertical"
            android:fontFamily="casual"
            android:gravity="center"
            android:layerType="software"
            android:text="@string/your_grade_result"
            android:textAlignment="gravity"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:textColorLink="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/grade_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:alpha="1"
            android:background="@color/colorSelected"
            android:fontFamily="monospace"
            android:gravity="center"
            android:layerType="none"
            android:text="@string/your_grade_comment"
            android:textAlignment="gravity"
            android:layout_gravity="center_horizontal"
            android:textAllCaps="false"
            android:textColorLink="@color/colorPrimaryDark" />

    </LinearLayout>
</LinearLayout>